Fixed bug where certain bibite files would cause error. Made it so that the PIP would have lower opacity normally, and only made fully visible when hovered

--- a/style.css
+++ b/style.css
@@ -320,6 +320,11 @@ button:hover {
     justify-content: center;
     align-items: center;
     overflow: hidden;
+    opacity: 0.5;
+}
+
+.preview-pip-container:hover {
+    opacity: 1;
 }
 
 .preview-pip-container canvas {
